añadimos el resto de pestañas y componentes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link btn" routerLink="/inicio">Inicio</a>
+          <a class="nav-link btn" routerLink="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <button (click)="goToServicios()">Ir a Servicios</button>
+          <a class="nav-link btn" routerLink="/servicios">Servicios</a> 
         </li>
         <li class="nav-item">
           <a class="nav-link btn" routerLink="/modelos">Modelos</a>
