--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -1,1 +1,3 @@
-<p>servicios works!</p>
+<app-servicios-section></app-servicios-section>
+<app-acerca-de></app-acerca-de>
+<app-testimonios></app-testimonios>
