--- a/src/app/components/formulario-contacto/formulario-contacto.component.scss
+++ b/src/app/components/formulario-contacto/formulario-contacto.component.scss
@@ -1,51 +1,80 @@
 .contact-section {
-    background-color: var(--light-bg-color);
-    padding: 50px 0;
-    flex: 1;
-  }
-  
-  .contact-section h2 {
-    font-size: 2rem;
-    text-align: center;
-    margin-bottom: 40px;
-  }
-  
-  .form-control {
-    border-radius: 8px;
-    box-shadow: none;
-    transition: border-color 0.3s ease;
-  }
-  
-  .form-control:focus {
-    border-color: var(--primary-color);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .btn-primary {
-    background-color: var(--primary-color);
-    border: none;
-    border-radius: 8px;
-    padding: 10px 20px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .btn-primary:hover {
-    background-color: var(--btn-hover-color);
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  .form-group label {
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  
-  #confirmationMessage {
-    display: none;
-    margin-top: 20px;
-    font-size: 1.2rem;
-    color: var(--primary-color);
-    text-align: center;
-  }
+  background-color: var(--light-bg-color);
+  padding: 50px 0;
+  flex: 1;
+}
+
+.contact-section h2 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.form-control {
+  border-radius: 8px;
+  box-shadow: none;
+  transition: border-color 0.3s ease;
+}
+
+.form-control:focus {
+  border-color: var(--primary-color);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.btn-primary {
+  background-color: var(--primary-color);
+  border: none;
+  border-radius: 8px;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+  background-color: var(--btn-hover-color);
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-group label {
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+#confirmationMessage {
+  display: none;
+  margin-top: 20px;
+  font-size: 1.2rem;
+  color: var(--primary-color);
+  text-align: center;
+}
+
+/* Estilos para el tema oscuro */
+.dark-theme .contact-section {
+  background-color: #333; /* Un gris oscuro para el fondo en tema oscuro */
+  color: #fff; /* Texto blanco para el tema oscuro */
+}
+
+.dark-theme .contact-section h2 {
+  color: #bbb; /* Un gris claro para el título en tema oscuro */
+}
+
+.dark-theme .form-control {
+  background-color: #444; /* Un gris más oscuro para los inputs */
+  color: #fff; /* Texto blanco para los inputs */
+  border-color: #666; /* Borde gris claro */
+}
+
+.dark-theme .form-control:focus {
+  border-color: var(--secondary-color); /* Cambia el color del borde al enfocar */
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.2); /* Sombra clara */
+}
+
+.dark-theme .form-group label {
+  color: #ccc; /* Un gris claro para las etiquetas */
+}
+
+.dark-theme #confirmationMessage {
+  color: var(--secondary-color); /* Cambia el color del mensaje de confirmación */
+}
