--- a/src/app/components/servicios-section/servicios-section.component.scss
+++ b/src/app/components/servicios-section/servicios-section.component.scss
@@ -1,9 +1,54 @@
+#servicios {
+  background-color: var(--light-bg-color);
+  padding: 50px 0;
+}
+
+#servicios h2 {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.service-card {
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.service-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
 .service-card-img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-  }
-  
-  .row > .col-md-4 {
-    margin-bottom: 30px;
-  }
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.row > .col-md-4 {
+  margin-bottom: 30px;
+}
+
+/* Estilos para el tema oscuro */
+.dark-theme #servicios {
+  background-color: #222; /* Fondo oscuro */
+  color: #eee; /* Texto claro */
+}
+
+.dark-theme #servicios h2 {
+  color: #bbb; /* Título gris claro */
+}
+
+.dark-theme .service-card {
+  background-color: #333; /* Fondo oscuro para las tarjetas */
+  box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1); /* Sombra clara */
+}
+
+.dark-theme .service-card .card-title {
+  color: #ccc; /* Título de la tarjeta gris claro */
+}
+
+.dark-theme .service-card .card-text {
+  color: #999; /* Texto de la tarjeta gris claro */
+}
