icono de la luna

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,7 +6,9 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <button class="btn btn-light ms-auto" (click)="themeService.toggleDarkMode()">Cambiar tema</button>
+    <button class="btn btn-light ms-auto" (click)="themeService.toggleDarkMode()">
+      <i class="bi bi-moon"></i> 
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
