--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -56,3 +56,11 @@
 .dark-theme .btn-light:hover {
   background-color: #777;
 }
+.btn .bi-moon {
+  font-size: 1.2rem; /* Ajusta el tamaño del icono */
+  margin-right: 5px;  /* Añade un margen a la derecha */
+}
+
+.btn {
+  background-color: #00796b;
+}
