--- a/src/app/components/servicios-section/servicios-section.component.html
+++ b/src/app/components/servicios-section/servicios-section.component.html
@@ -1,61 +1,61 @@
-<section id="servicios" class="py-5 content">
-    <div class="container">
-        <h2 class="text-center mb-4">Nuestros Servicios</h2>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card service-card">
-                    <img src="https://img.freepik.com/vector-gratis/trabajador-servicio-taller-reparacion-automoviles-reemplaza-neumatico-danado-ruedas-cambio_1284-16850.jpg" class="card-img-top service-card-img" alt="Mantenimiento">
-                    <div class="card-body">
-                        <h5 class="card-title">Mantenimiento de Coches</h5>
-                        <p class="card-text">Realizamos mantenimiento preventivo y correctivo de todo tipo de vehículos.</p>
-                    </div>
-                </div>
+<section class="services">
+    <div class="services__container">
+      <h2 class="services__title">Nuestros Servicios</h2>
+      <div class="services__list">
+        <div class="services__item">
+          <div class="services__card">
+            <img src="https://img.freepik.com/vector-gratis/trabajador-servicio-taller-reparacion-automoviles-reemplaza-neumatico-danado-ruedas-cambio_1284-16850.jpg" class="services__image" alt="Mantenimiento">
+            <div class="services__card-body">
+              <h5 class="services__card-title">Mantenimiento de Coches</h5>
+              <p class="services__card-text">Realizamos mantenimiento preventivo y correctivo de todo tipo de vehículos.</p>
             </div>
-            <div class="col-md-4">
-                <div class="card service-card">
-                    <img src="https://img.freepik.com/vector-premium/gerente-vendedores-autos-encuentra-autos-venta_109722-615.jpg" class="card-img-top service-card-img" alt="Venta de Coches">
-                    <div class="card-body">
-                        <h5 class="card-title">Venta de Coches</h5>
-                        <p class="card-text">Tenemos una amplia gama de modelos de coches nuevos y seminuevos.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card service-card">
-                    <img src="https://media.istockphoto.com/id/1148658941/es/vector/feliz-pareja-sonriente-hombre-mujer-personaje-comprando-nuevo-coche-y-tienda-tienda-regalo.jpg?s=612x612&w=0&k=20&c=DvXMkl8dYIhKL-twJz0oueuGFtrlAqdK_DJ4eT105qk=" class="card-img-top service-card-img" alt="Asesoría">
-                    <div class="card-body">
-                        <h5 class="card-title">Asesoría en Compra</h5>
-                        <p class="card-text">Te ayudamos a elegir el coche que mejor se adapte a tus necesidades.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card service-card">
-                    <img src="https://media.istockphoto.com/id/1125198441/es/vector/icono-de-seguros-de-coche.jpg?s=612x612&w=0&k=20&c=I4qUEdAVtcoXFqs5668UAV4NZ8l3QG5EunYY2CVVirg=" class="card-img-top service-card-img" alt="Seguros">
-                    <div class="card-body">
-                        <h5 class="card-title">Seguro de Coches</h5>
-                        <p class="card-text">Ofrecemos seguros completos para proteger tu vehículo ante cualquier imprevisto.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card service-card">
-                    <img src="https://media.istockphoto.com/id/1277316443/es/vector/dinero-del-veh%C3%ADculo-del-coche-costoso-vector-del-concepto-del-pr%C3%A9stamo-idea-del-precio-del.jpg?s=612x612&w=0&k=20&c=A74BxIXtcdwjBPlpZzryVXowqo17bYKOyswG9R8b5wo=" class="card-img-top service-card-img" alt="Financiamiento">
-                    <div class="card-body">
-                        <h5 class="card-title">Financiamiento</h5>
-                        <p class="card-text">Ofrecemos opciones de financiamiento flexible para facilitar la compra de tu coche.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card service-card">
-                    <img src="https://img.freepik.com/vector-premium/ilustracion-vector-estilo-dibujos-animados-diseno-mantenimiento-vehiculo-servicio-auto-reparacion-coche-profesional-aislado-blanco_169479-3155.jpg" class="card-img-top service-card-img" alt="Reparaciones">
-                    <div class="card-body">
-                        <h5 class="card-title">Reparaciones Especializadas</h5>
-                        <p class="card-text">Contamos con técnicos especializados para reparaciones de todo tipo de vehículos.</p>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="services__item">
+          <div class="services__card">
+            <img src="https://img.freepik.com/vector-premium/gerente-vendedores-autos-encuentra-autos-venta_109722-615.jpg" class="services__image" alt="Venta de Coches">
+            <div class="services__card-body">
+              <h5 class="services__card-title">Venta de Coches</h5>
+              <p class="services__card-text">Tenemos una amplia gama de modelos de coches nuevos y seminuevos.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services__item">
+          <div class="services__card">
+            <img src="https://media.istockphoto.com/id/1148658941/es/vector/feliz-pareja-sonriente-hombre-mujer-personaje-comprando-nuevo-coche-y-tienda-tienda-regalo.jpg?s=612x612&w=0&k=20&c=DvXMkl8dYIhKL-twJz0oueuGFtrlAqdK_DJ4eT105qk=" class="services__image" alt="Asesoría">
+            <div class="services__card-body">
+              <h5 class="services__card-title">Asesoría en Compra</h5>
+              <p class="services__card-text">Te ayudamos a elegir el coche que mejor se adapte a tus necesidades.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services__item">
+          <div class="services__card">
+            <img src="https://media.istockphoto.com/id/1125198441/es/vector/icono-de-seguros-de-coche.jpg?s=612x612&w=0&k=20&c=I4qUEdAVtcoXFqs5668UAV4NZ8l3QG5EunYY2CVVirg=" class="services__image" alt="Seguros">
+            <div class="services__card-body">
+              <h5 class="services__card-title">Seguro de Coches</h5>
+              <p class="services__card-text">Ofrecemos seguros completos para proteger tu vehículo ante cualquier imprevisto.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services__item">
+          <div class="services__card">
+            <img src="https://media.istockphoto.com/id/1277316443/es/vector/dinero-del-veh%C3%ADculo-del-coche-costoso-vector-del-concepto-del-pr%C3%A9stamo-idea-del-precio-del.jpg?s=612x612&w=0&k=20&c=A74BxIXtcdwjBPlpZzryVXowqo17bYKOyswG9R8b5wo=" class="services__image" alt="Financiamiento">
+            <div class="services__card-body">
+              <h5 class="services__card-title">Financiamiento</h5>
+              <p class="services__card-text">Ofrecemos opciones de financiamiento flexible para facilitar la compra de tu coche.</p>
+            </div>
+          </div>
+        </div>
+        <div class="services__item">
+          <div class="services__card">
+            <img src="https://img.freepik.com/vector-premium/ilustracion-vector-estilo-dibujos-animados-diseno-mantenimiento-vehiculo-servicio-auto-reparacion-coche-profesional-aislado-blanco_169479-3155.jpg" class="services__image" alt="Reparaciones">
+            <div class="services__card-body">
+              <h5 class="services__card-title">Reparaciones Especializadas</h5>
+              <p class="services__card-text">Contamos con técnicos especializados para reparaciones de todo tipo de vehículos.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</section>
+  </section>
